--- a/style.css
+++ b/style.css
@@ -44,3 +44,18 @@ label {
   text-align: center;
   margin: 1.25em 0 1.87em 0;
 }
+
+ul {
+  list-style-type: none;
+}
+
+.container li {
+  font-weight: 500;
+  background-color: #eff5ff;
+  color: #025bee;
+  margin-bottom: 1.1em;
+  padding: 1.1em 1em;
+  border-radius: 0.3em;
+  display: flex;
+  justify-content: space-between;
+}
